@@ -772,4 +772,6 @@ Changes since version 1.6-1
     to balance by filling in NA values ("fill", like before) and now also by
     keeping only time periods shared among all individuals ("shared").
   * pbsytest: issue warning when applied to an unbalanced model (unbalanced tests still in preparation).
+  * print.summary.plm: for "between" models: print the no. of obs used in estimation
+                       (like for "fd" models since 1.5-24).
   
